--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "project1"]
 	path = project1
 	url = https://github.com/shilena91/project1.git
+[submodule "project2"]
+	path = project2
+	url = https://github.com/shilena91/project2.git
